--- a/src/Components/banner.css
+++ b/src/Components/banner.css
@@ -96,14 +96,14 @@
   border-radius: 0%;
 }
 
-h1 {
+/* h1 {
   margin: 0%;
-  padding: 50px;
-  color: black;
+  padding: 0px;
+  color: rgb(89, 30, 30);
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: 700;
+  font-weight: bold;
   text-align: center;
-}
+} */
 
 /* .button {
   background-color: #077c9c;
