--- a/src/Components/heroCard.css
+++ b/src/Components/heroCard.css
@@ -1,11 +1,11 @@
 .hero {
   display: flex;
-  margin: 5px;
-  padding: 0px 20px 20px 200px;
+  margin: 70px;
+  padding: 0px 20px 60px 150px;
 }
 
 .card {
-  padding: 0px 0px 10px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
 .hero h5 {
@@ -24,4 +24,15 @@ p {
   font-family: Arial;
   font-weight: bold;
   color: rgba(10, 4, 4, 0.5);
+}
+
+h2 {
+  font-weight: 900;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(9, 11, 12);
+  position: initial;
+  text-align: center;
+  justify-content: center;
+  padding: 0px 0px 0px 0px;
+  margin: 0px;
 }
